--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "@types/chai": ">=3.4.34 <3.6.0",
     "@types/mocha": ">=2.2.33 <2.6.0",
     "ajv": "~5.2.2",
-    "gulp": "~3.9.1",
+    "gulp": "^3.9.1",
     "vue-loader": "^15.0.5",
     "vue-template-compiler": "^2.5.16",
     "webpack-merge": "^4.1.2"
