--- a/package.json
+++ b/package.json
@@ -16,9 +16,11 @@
     "@microsoft/sp-office-ui-fabric-core": "~1.4.1",
     "@microsoft/sp-webpart-base": "~1.4.1",
     "@types/webpack-env": ">=1.12.1 <1.14.0",
+    "reflect-metadata": "^0.1.12",
     "vue": "^2.5.16",
     "vue-class-component": "^6.2.0",
-    "vue-property-decorator": "^6.0.0"
+    "vue-property-decorator": "^6.1.0",
+    "vuetify": "^1.0.19"
   },
   "devDependencies": {
     "@microsoft/sp-build-web": "~1.4.1",
@@ -28,6 +30,7 @@
     "@types/mocha": ">=2.2.33 <2.6.0",
     "ajv": "~5.2.2",
     "gulp": "^3.9.1",
+    "uglifyjs-webpack-plugin": "^1.2.7",
     "vue-loader": "^15.0.5",
     "vue-template-compiler": "^2.5.16",
     "webpack-merge": "^4.1.2"
