--- a/src/webparts/vueSimpleWp/CalculatorsWebPart.manifest.json
+++ b/src/webparts/vueSimpleWp/CalculatorsWebPart.manifest.json
@@ -1,7 +1,7 @@
 {
   "$schema": "https://dev.office.com/json-schemas/spfx/client-side-web-part-manifest.schema.json",
   "id": "c02f2586-6588-4a17-a8b3-086bcad0c092",
-  "alias": "VueSimpleWpWebPart",
+  "alias": "CalculatorsWebPart",
   "componentType": "WebPart",
 
   // The "*" signifies that the version should be taken from the package.json
@@ -16,11 +16,11 @@
   "preconfiguredEntries": [{
     "groupId": "5c03119e-3074-46fd-976b-c60198311f70", // Other
     "group": { "default": "Other" },
-    "title": { "default": "VueSimpleWP" },
-    "description": { "default": "VueSimpleWP description" },
+    "title": { "default": "Measurement Converters" },
+    "description": { "default": "FGS Calculators and Converters" },
     "officeFabricIconFontName": "Page",
     "properties": {
-      "description": "VueSimpleWP"
+      "description": "Calculators and Converters"
     }
   }]
 }
